# CityTraffic

./: .gitignore  CMakeLists.txt  main.cpp
gui/: GUI.cpp  GUI.h
include/: Bus.h  Car.h  Entity.h  EntityManager.h  Intersection.h  Map.h  Pedestrian.h  Simulation.h  Tile.h  TrafficLights.h  Vehicle.h
resources/: city_100x40.csv  map.csv
simulation/: GUI.cpp  GUI.h  Simulation.h
src/: Bus.cpp  Car.cpp  Entity.cpp  EntityManager.cpp  Intersection.cpp  Map.cpp  Pedestrian.cpp  Simulation.cpp  Tile.cpp  TrafficLights.cpp  Vehicle.cpp
